Implement seeding logic, login and register in client app

--- a/client/src/app/components/shared/toolbar/toolbar.component.html
+++ b/client/src/app/components/shared/toolbar/toolbar.component.html
@@ -14,6 +14,7 @@
         class="navigation-links">
       <li><a *ngIf="!isAuth" routerLink="/login">Log In</a></li>
       <li><a *ngIf="!isAuth" routerLink="/signup">Sign Up</a></li>
+      <li><a *ngIf="isAuth && isAdmin" routerLink="/product/create">Create Product</a></li>
       <!-- <li><a *ngIf="isAuth" routerLink="/product">Products</a></li> -->
       <li><a *ngIf="isAuth" (click)="logout()" class="logout-link">Logout</a></li>
     </ul>
