--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -1,9 +1,8 @@
 <form (ngSubmit)="login()" [formGroup]="loginForm" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
     <mat-form-field>
-        <input formControlName="email" matInput type="email" placeholder="Your email...">
+        <input formControlName="username" matInput type="username" placeholder="Your username...">
         <mat-hint>Enter a valid email address.</mat-hint>
-        <mat-error *ngIf="loginForm.get('email').hasError('required')">Email is required.</mat-error>
-        <mat-error *ngIf="loginForm.get('email').hasError('email')">Email is invalid.</mat-error>
+        <mat-error *ngIf="loginForm.get('username').hasError('required')">Username is required.</mat-error>
     </mat-form-field>
     <mat-form-field>
         <input formControlName="password" matInput type="password" placeholder="Your password...">
