Product list page and rename template in Bulgarian

--- a/client/src/app/components/category/category-create/category-create.component.html
+++ b/client/src/app/components/category/category-create/category-create.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="formHandler()" [formGroup]="categoryForm" fxLayout="column" fxLayoutAlign="center center">
-    <mat-form-field appearance="standard" style="width:50%">
+    <mat-form-field appearance="standard" class="w-40">
       <mat-label>Име</mat-label>
       <input formControlName="name" matInput placeholder="Въведете име на продукта" />
       <mat-error *ngIf="name.hasError('required')">Името е задаължително!</mat-error>
@@ -7,5 +7,5 @@
       <mat-error *ngIf="name.hasError('maxlength')">Името трябва да бъде най-много {{nameMaxLength}} символа</mat-error>
     </mat-form-field>
     
-    <button [disabled]="categoryForm.invalid" type="submit" mat-fab color="primary">Create</button>
+    <button [disabled]="categoryForm.invalid" type="submit" mat-fab color="primary">Добави</button>
 </form>
