--- a/client/src/app/components/product/product-create/product-create.component.html
+++ b/client/src/app/components/product/product-create/product-create.component.html
@@ -1,29 +1,29 @@
 <form (ngSubmit)="formHandler()" [formGroup]="productForm" fxLayout="column" fxLayoutAlign="center center">
-  <mat-form-field appearance="standard">
+  <mat-form-field appearance="standard" class="w-40">
     <mat-label>Име</mat-label>
     <input formControlName="name" matInput placeholder="Въведете име на продукта" />
     <mat-error *ngIf="name.hasError('required')">Името е задаължително!</mat-error>
     <mat-error *ngIf="name.hasError('minlength')">Името трябва да бъде поне {{nameMinLength}} символа дълго</mat-error>
     <mat-error *ngIf="name.hasError('maxlength')">Името трябва да бъде най-много {{nameMaxLength}} символа</mat-error>
   </mat-form-field>
-  <mat-form-field appearance="standard">
+  <mat-form-field appearance="standard"  class="w-40">
     <mat-label>Цена на продукта в лв.</mat-label>
     <input formControlName="price" type="number" matInput placeholder="Въведете цена на продукта в лв." />
     <mat-error *ngIf="price.hasError('required')">Цената е задаължителна!</mat-error>
     <mat-error *ngIf="price.hasError('min')">Цената трябва да бъде поне {{priceMinValue}} лв.</mat-error>
     <mat-error *ngIf="price.hasError('max')">Цената трябва да бъде най-много {{priceMaxValue}} лв.</mat-error>
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="w-40"> 
       <mat-select formControlName="categoryId" placeholder="Изберете категория на продукта">
         <mat-option *ngFor="let category of categories$ | async" [value]="category.id">{{category.name}}</mat-option>
       </mat-select>
       <mat-error *ngIf="categoryId.hasError('required')">Категорията е задаължителна!</mat-error>
   </mat-form-field>
-  <mat-form-field appearance="standard">
+  <mat-form-field appearance="standard" class="w-40">
     <mat-label>Снимка</mat-label>
     <input formControlName="image" matInput placeholder="Снимка." />
   </mat-form-field>
-  <mat-form-field appearance="standard">
+  <mat-form-field appearance="standard" class="w-40">
     <mat-label>Описание</mat-label>
     <textarea formControlName="description" matInput placeholder="Въведете описание на продукта" rows="5"></textarea>
     <mat-error *ngIf="description.hasError('required')">Oписанието е задаължително!</mat-error>
@@ -32,5 +32,5 @@
     <mat-error *ngIf="description.hasError('maxlength')">Oписанието трябва да бъде най-много {{descriptionMaxLength}}
       символа!</mat-error>
   </mat-form-field>
-  <button [disabled]="productForm.invalid" type="submit" mat-fab color="primary">Create</button>
+  <button [disabled]="productForm.invalid" type="submit" mat-fab color="primary">Добави</button>
 </form>
