--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -12,3 +12,48 @@ body {
 .w-50{
   width: 50% !important;
 }
+
+.w-40{
+  width: 40% !important;
+}
+
+
+.m-1{
+  margin: 5px;
+}
+
+.m-2{
+  margin: 15px;
+}
+
+.m-3{
+  margin: 20px;
+}
+
+.m-4{
+  margin: 25px;
+}
+
+.m-5{
+  margin: 30px;
+}
+
+.p-1{
+  margin: 5px;
+}
+
+.p-2{
+  padding: 15px;
+}
+
+.p-3{
+  padding: 20px;
+}
+
+.p-4{
+  padding: 25px;
+}
+
+.p-5{
+  margin: 30px;
+}
