Translate pages in bulgarian

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <section>
     <div fxLayout="column" fxLayoutAlign="center center">
-      <h1>Welcome to our online shop.</h1>
-      <p>View our products and choose which ones you want to buy.</p>
+      <h1>Добре дошли в нашия онлайн магазин</h1>
+      <p>Може да разгледаате нашите различни продукти</p>
     </div>
   </section>
