--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<section>
-    <div fxLayout="column" fxLayoutAlign="center center">
-      <h1>Добре дошли в нашия онлайн магазин</h1>
-      <p>Може да разгледаате нашите различни продукти</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Добре дошли в нашия онлайн магазин</h1>
+      <p class="lead">Може да разгледаате нашите различни продукти</p>
     </div>
-  </section>
+  </div>
