--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,11 +1,4 @@
-<mat-sidenav-container>
-  <mat-sidenav #sidenav>
-    <app-sidebar-list></app-sidebar-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <app-toolbar (sidenavToggle)="sidenav.toggle()"></app-toolbar>
-    <main>
-      <router-outlet></router-outlet>
-    </main>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<app-nav-bar></app-nav-bar>
+<main>
+  <router-outlet></router-outlet>
+</main>
