--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -1,15 +1,22 @@
-<form (ngSubmit)="login()" [formGroup]="loginForm" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
-    <mat-form-field>
-        <input formControlName="username" matInput type="username" placeholder="Your username...">
-        <mat-hint>Enter a valid email address.</mat-hint>
-        <mat-error *ngIf="loginForm.get('username').hasError('required')">Username is required.</mat-error>
-    </mat-form-field>
-    <mat-form-field>
-        <input formControlName="password" matInput type="password" placeholder="Your password...">
-        <mat-hint>Enter a valid password.</mat-hint>
-        <mat-error *ngIf="loginForm.get('password').hasError('required')">Password is required.</mat-error>
-        <mat-error *ngIf="loginForm.get('password').hasError('minlength')">Password must be at least 6 symbols.
-        </mat-error>
-    </mat-form-field>
-    <button [disabled]="loginForm.invalid" mat-raised-button type="submit" color="primary">Log In</button>
-</form>
+<div class="d-flex justify-content-center">
+    <form class="w-50" (ngSubmit)="login()" [formGroup]="loginForm">
+        <div class="form-group">
+            <label>Потребителско име</label>
+            <input class="form-control" formControlName="username" type="text"
+                placeholder="Въведете Вашето потребителско име">
+            <span class="text-danger"
+                *ngIf="loginForm.get('username').touched && loginForm.get('username').hasError('required')">
+                Потребителското име е задължително!
+            </span>
+        </div>
+        <div class="form-group">
+            <label>Парола</label>
+            <input class="form-control" formControlName="password" type="password" placeholder="Въведете Вашата парола">
+            <span class="text-danger"
+                *ngIf="loginForm.get('password').touched && loginForm.get('password').hasError('required')">
+                Паролата е задължителена!
+            </span>
+        </div>
+        <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary">Вход</button>
+    </form>
+</div>
