--- a/client/src/app/components/category/category-list/category-list.component.html
+++ b/client/src/app/components/category/category-list/category-list.component.html
@@ -1,19 +1,15 @@
-<div fxLayoutAlign="center center">
-  <mat-form-field fxFlex="40%">
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Филтър">
-  </mat-form-field>
-</div>
-<mat-table [dataSource]="dataSource" matSort>
-  <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>
-      Име на категория
-    </mat-header-cell>
-    <mat-cell *matCellDef="let element">
-      {{element.name}}
-    </mat-cell>
-  </ng-container>
-
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
-<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+<table class="table table-striped">
+    <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Име</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let category of categories$ | async; index as i">
+      <th scope="row">{{ i + 1 }}</th>
+     
+      <td>{{ category.name }}</td>
+    </tr>
+    </tbody>
+  </table>
