--- a/client/src/app/components/category/category-list/category-list.component.html
+++ b/client/src/app/components/category/category-list/category-list.component.html
@@ -1,15 +1,16 @@
 <table class="table table-striped">
-    <thead>
+  <thead>
     <tr>
       <th scope="col">#</th>
       <th scope="col">Име</th>
     </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let category of categories$ | async; index as i">
+  </thead>
+  <tbody>
+    <tr *ngFor="let category of categories; index as i">
       <th scope="row">{{ i + 1 }}</th>
-     
       <td>{{ category.name }}</td>
     </tr>
-    </tbody>
-  </table>
+  </tbody>
+</table>
+<ngb-pagination [collectionSize]="allCategories.length" (pageChange)="getCategoriesPerPage($event)" [(page)]="page" [maxSize]="10" [rotate]="true" [boundaryLinks]="true">
+</ngb-pagination>
