List product page css

--- a/client/src/app/components/product/product-info/product-info.component.html
+++ b/client/src/app/components/product/product-info/product-info.component.html
@@ -8,7 +8,7 @@
         <div class="d-flex justify-content-between">
             <a routerLink="/product/edit/{{product.id}}" class="btn btn-warning">Редактиране</a>
             <!-- <button (click)="showProductDeleteConfirmationModal(product.id)" class="btn btn-danger">Изтриване</button> -->
-            <button class="btn btn-outline-primary mr-2" (click)="open(product.id)">
+            <button class="btn btn-danger mr-2" (click)="open(product.id)">
                   Изтриване
             </button>
         </div>
