--- a/client/src/app/components/product/product-list/product-list.component.html
+++ b/client/src/app/components/product/product-list/product-list.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-around">
+<div class="products">
     <ng-container *ngFor="let product of products">
-        <app-product-info [product]="product" class="w-23"></app-product-info>
+        <app-product-info [product]="product" class="product-item"></app-product-info>
     </ng-container>
 </div>
