--- a/client/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/client/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -14,12 +14,11 @@
 </ul> -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Онлай магазин</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <a class="navbar-brand" href="#">Онлайн магазин</a>
+  <button class="navbar-toggler" type="button">
+    <span class="navbar-toggler-icon" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="main-navbar" aria-label="Toggle navigation"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse navbar-collapse" id="main-navbar" [ngbCollapse]="isCollapsed">
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" *ngIf="!isAuth" routerLink="/login">Вход</a>
