--- a/client/src/app/components/shared/search-form/search-form.component.html
+++ b/client/src/app/components/shared/search-form/search-form.component.html
@@ -3,7 +3,7 @@
         <label for="category" class="pt-2 font-weight-bold text-nowrap mx-2">Категория:</label>
         <select class="form-control" id="category" formControlName="category">
             <option value="">Без значение</option>
-            <option *ngFor="let category of categories$ | async" value="category">{{category.name}}</option>
+        <option *ngFor="let category of categories$ | async" [value]="category.id">{{category.name}}</option>
         </select>
     </div>
     <div class="d-inline-flex justify-content-start ml-4">
