some configurational changes

--- a/client/src/app/components/product/product-list/product-list.component.html
+++ b/client/src/app/components/product/product-list/product-list.component.html
@@ -7,6 +7,7 @@
 </div>
 
 <ngb-pagination 
+    class="d-flex justify-content-center" 
     [collectionSize]="allProducts.length" 
     [pageSize]="pageSize" 
     (pageChange)="getProductsPerPage($event)"
